# ScratchPad

./: .gitignore  README.md
AdventOfCode2021/aoc01/src/: main.rs
AdventOfCode2021/aoc02/src/: main.rs
AdventOfCode2021/aoc03/src/: main.rs
PyO3_tutorial/A_helloworld/: Cargo.toml  README.md  hello.py
PyO3_tutorial/A_helloworld/src/: lib.rs
PyO3_tutorial/B_maturin/: Cargo.toml  README.md  catch_error.py  class_struct.py  fibonacci.py  logger.py  serde_ex.py  type_conv.py
PyO3_tutorial/B_maturin/src/: lib.rs
arg_processing/: Cargo.toml  README.md
arg_processing/src/: args.rs  main.rs
comma_num/: Cargo.toml  README.md
comma_num/src/: lib.rs
gRPC/Tutorial01/: Cargo.toml  build.rs
gRPC/Tutorial01/src/: client.rs  server.rs
gRPC/Tutorial01/src/proto/: payments.proto
gRPC/Tutorial02/: Cargo.toml  README.md  build.rs
gRPC/Tutorial02/proto/: bookstore.proto
gRPC/Tutorial02/src/: bookstore.rs  main.rs
hwpx_table_parse/: Cargo.toml  README.md  table.hwpx
hwpx_table_parse/src/: hwpx.rs  main.rs
regex/: Cargo.toml  README.md
regex/src/: main.rs
