[package]
name = "maturin_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3-log = "0.6"
log = "0.4"

[lib]
name = "rust"
crate-type = ["cdylib"]