[package]
name = "gRPC_tutorial02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
tonic = "0.7"
tokio = {version="1.18.2", features = ["rt-multi-thread", "macros"]}

[build-dependencies]
tonic-build = "0.7"
